--- a/entrypoints/popup/style.css
+++ b/entrypoints/popup/style.css
@@ -1,6 +1,9 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 @plugin "daisyui" {
-  themes: [ 'light', 'dark', 'cupcake'];
+  themes:
+    [ "light",
+    "dark",
+    "cupcake"];
 }
 
 :root {
