--- a/entrypoints/popup/style.css
+++ b/entrypoints/popup/style.css
@@ -12,12 +12,16 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+body {
+  width: 300px;
+  margin: 0;
+  padding: 0;
 }
