--- a/entrypoints/popup/style.css
+++ b/entrypoints/popup/style.css
@@ -10,6 +10,8 @@
   body {
     width: 400px;
     min-height: 450px;
+    max-height: 600px;
+    overflow: hidden;
     margin: 0;
     padding: 0;
     @apply bg-base-100 text-base-content;
